fixed-width box with text overflow for titles

--- a/angular/app/styles/main.scss
+++ b/angular/app/styles/main.scss
@@ -501,8 +501,8 @@ div.bio {margin-bottom: 60px;}
   font-size: 18px;
   color: #434055;
   letter-spacing: 0.75px;
-  max-width: 200%;
-  white-space: nowrap;
+  max-width: 30%;
+  // white-space: nowrap;
   background-color: $panels-bg;
   border: 1px solid $panels-stroke;
   border-radius: 4px;
